window.HTMLSpanElement does not exist https://bugs.webkit.org/show_bug.cgi?id=67571

Reviewed by Sam Weinig.

Source/WebCore:

We have these objects for most other elements and HTMLSpanElement
exists in Firefox and in the HTML5 spec.  This patch adds it.

Test: fast/dom/wrapper-classes.html

* CMakeLists.txt:
* CodeGenerators.pri:
* DerivedSources.cpp:
* DerivedSources.make:
* GNUmakefile.list.am:
* WebCore.gypi:
* WebCore.pro:
* WebCore.vcproj/WebCore.vcproj:
* WebCore.xcodeproj/project.pbxproj:
* html/HTMLElementsAllInOne.cpp:
* html/HTMLSpanElement.cpp: Added.
(WebCore::HTMLSpanElement::HTMLSpanElement):
(WebCore::HTMLSpanElement::create):
* html/HTMLSpanElement.h: Added.
* html/HTMLSpanElement.idl: Added.
* html/HTMLTagNames.in:
* page/DOMWindow.idl:

LayoutTests:

Update tests to account for HTMLSpanElement existing.  I also took the
liberty of changing fast/tokenizer/external-script-document-write.html
into a text test and cleaning up the platform-specific results.

* editing/selection/extend-after-mouse-selection-expected.txt:
* fast/dom/gc-6-expected.txt:
* fast/dom/gc-7-expected.txt:
* fast/dom/wrapper-classes-expected.txt:
* fast/dom/wrapper-classes.html:
* fast/events/mouseclick-target-and-positioning-expected.txt:
* fast/js/toString-and-valueOf-override-expected.txt:
* fast/tokenizer/external-script-document-write-expected.txt: Added.
* fast/tokenizer/resources/external-script-document-write.js:
* platform/chromium-linux/fast/tokenizer/external-script-document-write-expected.png: Removed.
* platform/chromium-win/fast/tokenizer/external-script-document-write-expected.png: Removed.
* platform/chromium-win/fast/tokenizer/external-script-document-write-expected.txt: Removed.
* platform/gtk/fast/tokenizer/external-script-document-write-expected.png: Removed.
* platform/gtk/fast/tokenizer/external-script-document-write-expected.txt: Removed.
* platform/mac-leopard/fast/tokenizer/external-script-document-write-expected.png: Removed.
* platform/mac/fast/tokenizer/external-script-document-write-expected.png: Removed.
* platform/mac/fast/tokenizer/external-script-document-write-expected.txt: Removed.
* platform/qt/fast/tokenizer/external-script-document-write-expected.png: Removed.
* platform/qt/fast/tokenizer/external-script-document-write-expected.txt: Removed.


Canonical link: https://commits.webkit.org/83450@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94545 268f45cc-cd09-0410-ab3c-d52691b4dbfc