LayoutTests/fast/tokenizer/resources/external-script-document-write.js
@@ -1,2 +1,5 @@
+if (window.layoutTestController)
+    layoutTestController.dumpAsText();
+
 document.write('<span id="x"></span>');
 document.write("This should be a span: " + document.getElementById('x'));
