Source/WebCore/CodeGenerators.pri
@@ -303,6 +303,7 @@ IDL_BINDINGS += \
     html/HTMLScriptElement.idl \
     html/HTMLSelectElement.idl \
     html/HTMLSourceElement.idl \
+    html/HTMLSpanElement.idl \
     html/HTMLStyleElement.idl \
     html/HTMLTableCaptionElement.idl \
     html/HTMLTableCellElement.idl \
